--- a/source/_posts/变量对象.md
+++ b/source/_posts/变量对象.md
@@ -7,11 +7,12 @@ tags:
 categories:
 - 深入理解 Javascript 系列
 ---
-前一篇文章{% post_link 变量提升 变量提升 %}简单的介绍了一下变量提升原则，这篇文章将会从更专业的角度介绍变量提升。
+前一篇文章{% post_link 变量提升 变量提升 %}简单的介绍了一下变量提升原则，这篇文章将会从更专业的角度介绍变量提升，主要介绍了变量对象，全局上下文，函数上下文以及执行上下文。
 
 <!-- more -->
 
 ## 前言
+
 当 JavaScript 代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)。
 
 对于每个执行上下文，都有三个重要属性：
@@ -32,11 +33,9 @@ categories:
 
 我们先了解一个概念，叫全局对象。在 [W3School](http://www.w3school.com.cn/jsref/jsref_obj_global.asp) 中也有介绍：
 
->全局对象是预定义的对象，作为 JavaScript 的全局函数和全局属性的占位符。通过使用全局对象，可以访问所有其他所有预定义的对象、函数和属性。
-
->在顶层 JavaScript 代码中，可以用关键字 this 引用全局对象。因为全局对象是作用域链的头，这意味着所有非限定性的变量和函数名都会作为该对象的属性来查询。
-
->例如，当JavaScript 代码引用 parseInt() 函数时，它引用的是全局对象的 parseInt 属性。全局对象是作用域链的头，还意味着在顶层 JavaScript 代码中声明的所有变量都将成为全局对象的属性。
+> 全局对象是预定义的对象，作为 JavaScript 的全局函数和全局属性的占位符。通过使用全局对象，可以访问所有其他所有预定义的对象、函数和属性。
+> 在顶层 JavaScript 代码中，可以用关键字 this 引用全局对象。因为全局对象是作用域链的头，这意味着所有非限定性的变量和函数名都会作为该对象的属性来查询。
+> 例如，当JavaScript 代码引用 parseInt() 函数时，它引用的是全局对象的 parseInt 方法。全局对象是作用域链的头，还意味着在顶层 JavaScript 代码中声明的所有变量都将成为全局对象的属性。
 
 如果看的不是很懂的话，容我再来介绍下全局对象:
 
@@ -103,16 +102,19 @@ console.log(this.b);
 变量对象会包括：
 
 1. 函数的所有形参 (如果是函数上下文)
-    * 由名称和对应值组成的一个变量对象的属性被创建
-    * 没有实参，属性值设为 undefined
+
+    - 由名称和对应值组成的一个变量对象的属性被创建
+    - 没有实参，属性值设为 undefined
 
 2. 函数声明
-    * 由名称和对应值（函数对象(function-object)）组成一个变量对象的属性被创建
-    * 如果变量对象已经存在相同名称的属性，则完全替换这个属性
+
+    - 由名称和对应值（函数对象(function-object)）组成一个变量对象的属性被创建
+    - 如果变量对象已经存在相同名称的属性，则完全替换这个属性
 
 3. 变量声明
-    * 由名称和对应值（undefined）组成一个变量对象的属性被创建；
-    * 如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性
+
+    - 由名称和对应值（undefined）组成一个变量对象的属性被创建；
+    - 如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性
 
 举个例子：
 
