--- a/source/_posts/散列查找.md
+++ b/source/_posts/散列查找.md
@@ -11,7 +11,7 @@ categories:
 - 数据结构
 ---
 
-问题：如何快速搜索到需要的关键词？
+散列查找解决的一个基本问题是：如何快速搜索到需要的关键词？
 
 我们知道查找的本质是已知一个对象，找到该对象的位置。因此如果我们在安排位置时，通过一个”散列函数“来计算出对象的位置进行存放，当要查找这个对象时，再通过相同的”散列函数“即可直接计算出对象的位置。
 
