--- a/source/_posts/数据结构—树.md
+++ b/source/_posts/数据结构—树.md
@@ -1,5 +1,5 @@
 ---
-title: 数据结构——树（上）
+title: 树的定义及描述
 date: 2019-12-13 14:20:00
 top: 10
 tags:
@@ -8,8 +8,6 @@ tags:
 categories:
 - 数据结构
 ---
-
-## 树的定义
 
 树（Tree）是由 n 个结点构成的有限集合。当 n=0 时，称为空树；对于任意一颗非空树，它具备以下特征：
 
