--- a/source/_posts/数据结构—树2.md
+++ b/source/_posts/数据结构—树2.md
@@ -1,5 +1,5 @@
 ---
-title: 数据结构——树（中）
+title: 二叉搜索树与平衡二叉树
 date: 2019-12-14 20:48:52
 top: 10
 tags:
@@ -10,11 +10,13 @@ categories:
 - 数据结构
 ---
 
+二叉搜索树始终特殊的二叉树,它主要用于解决动态查找问题,能够比较快速地查找出想要的元素.而平衡二叉树是对二叉搜索树的改进,它本身也是一颗平衡二叉树,它保证查找所有结点的比较次数的平均值即树的“平均查找长度”最小.
+
+<!-- more -->
+
 ## 二叉搜索树
 
 查找问题可分为静态查找和动态查找，静态查找可以用二分查找算法，针对动态查找，数据应该如何组织呢？
-
-<!-- more -->
 
 ### 二叉搜索树的定义
 
